fix(calm-hub): make version ordering null- and separator-tolerant
Addresses Copilot review feedback on #2908.

SemanticVersionOrder re-implemented parsing that Semver.tryParse already
does, and did it less tolerantly:

- null threw NPE, contradicting the class's own documented contract that
  malformed input sorts as 0.0.0 rather than failing a listing. This is
  reachable: listVersions reads the version field straight out of a stored
  document, so a document missing that field arrives as null.
- dash-encoded versions were treated as malformed and demoted to 0.0.0.
  ADR 0002 has the new collections storing dots, so this should not happen,
  but VERSION_REGEX accepts either form from the API and silently
  mis-sorting is a poor way to discover a leak.

Delegating to Semver fixes both and drops the duplicate parser. Ordering
is unchanged for well-formed dot-separated input.